{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 251,
  "lineage": "fe758d7c-060b-7038-45b7-61c5810e482f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tgattachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/TargetGroup/94e0029232be9051-20230317204421785200000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/TargetGroup/94e0029232be9051",
            "target_id": "i-06ca566a261f563c4"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/TargetGroup/94e0029232be9051-20230317204421858400000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/TargetGroup/94e0029232be9051",
            "target_id": "i-029c837cf4203e21d"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/TargetGroup/94e0029232be9051-20230317204422227900000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/TargetGroup/94e0029232be9051",
            "target_id": "i-0d88e7a987512f2a4"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04b6d2588048c9b97",
            "domain": "vpc",
            "id": "eipalloc-0bd6921d9eb266e33",
            "instance": "i-06ca566a261f563c4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0868d34aa8935a124",
            "private_dns": "ip-10-0-0-71.ec2.internal",
            "private_ip": "10.0.0.71",
            "public_dns": "ec2-3-223-81-12.compute-1.amazonaws.com",
            "public_ip": "3.223.81.12",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-0"
            },
            "tags_all": {
              "Name": "EIP-0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0542ad9fe2067982b",
            "domain": "vpc",
            "id": "eipalloc-0c505b156fd95661b",
            "instance": "i-029c837cf4203e21d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03530ec54c79d2c62",
            "private_dns": "ip-10-0-22-194.ec2.internal",
            "private_ip": "10.0.22.194",
            "public_dns": "ec2-44-213-146-122.compute-1.amazonaws.com",
            "public_ip": "44.213.146.122",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-1"
            },
            "tags_all": {
              "Name": "EIP-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0df281328ed92d37d",
            "domain": "vpc",
            "id": "eipalloc-0923c46463fe02edf",
            "instance": "i-0d88e7a987512f2a4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aeb46ab627ed1ecf",
            "private_dns": "ip-10-0-43-239.ec2.internal",
            "private_ip": "10.0.43.239",
            "public_dns": "ec2-52-207-146-61.compute-1.amazonaws.com",
            "public_ip": "52.207.146.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-2"
            },
            "tags_all": {
              "Name": "EIP-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:191805346255:instance/i-06ca566a261f563c4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ca566a261f563c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud_gaming",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0868d34aa8935a124",
            "private_dns": "ip-10-0-0-71.ec2.internal",
            "private_ip": "10.0.0.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d3add3b9fe8f79fc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-003b53b3264108d0a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd297faf3ca5e180",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Test",
              "Name": "Instance-0"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "Test",
              "Name": "Instance-0"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m"
            },
            "vpc_security_group_ids": [
              "sg-003b53b3264108d0a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:191805346255:instance/i-029c837cf4203e21d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029c837cf4203e21d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud_gaming",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03530ec54c79d2c62",
            "private_dns": "ip-10-0-22-194.ec2.internal",
            "private_ip": "10.0.22.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e66af5e95d8c08db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-003b53b3264108d0a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f3a9bd47a24e366",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Test",
              "Name": "Instance-1"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "Test",
              "Name": "Instance-1"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m"
            },
            "vpc_security_group_ids": [
              "sg-003b53b3264108d0a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:191805346255:instance/i-0d88e7a987512f2a4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d88e7a987512f2a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud_gaming",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aeb46ab627ed1ecf",
            "private_dns": "ip-10-0-43-239.ec2.internal",
            "private_ip": "10.0.43.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2aec8a01c44de69",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-003b53b3264108d0a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad5b170ca6e7e8b2",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Test",
              "Name": "Instance-2"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "Test",
              "Name": "Instance-2"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m"
            },
            "vpc_security_group_ids": [
              "sg-003b53b3264108d0a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:internet-gateway/igw-0361792127d155afd",
            "id": "igw-0361792127d155afd",
            "owner_id": "191805346255",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-03a6bc60f88ba8c3f"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:loadbalancer/app/ALB/292daa6fcbe26883",
            "arn_suffix": "app/ALB/292daa6fcbe26883",
            "dns_name": "ALB-988768060.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:191805346255:loadbalancer/app/ALB/292daa6fcbe26883",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "security_groups": [
              "sg-003b53b3264108d0a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f3a9bd47a24e366"
              },
              {
                "subnet_id": "subnet-0ad5b170ca6e7e8b2"
              },
              {
                "subnet_id": "subnet-0bd297faf3ca5e180"
              }
            ],
            "subnets": [
              "subnet-02f3a9bd47a24e366",
              "subnet-0ad5b170ca6e7e8b2",
              "subnet-0bd297faf3ca5e180"
            ],
            "vpc_id": "vpc-03a6bc60f88ba8c3f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:listener/app/ALB/292daa6fcbe26883/9b1d6efa0d076ced",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191805346255:listener/app/ALB/292daa6fcbe26883/9b1d6efa0d076ced",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:loadbalancer/app/ALB/292daa6fcbe26883",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/TargetGroup/94e0029232be9051",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:listener-rule/app/ALB/292daa6fcbe26883/9b1d6efa0d076ced/d29218fe5bbb35fe",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/var/www/html/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191805346255:listener-rule/app/ALB/292daa6fcbe26883/9b1d6efa0d076ced/d29218fe5bbb35fe",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:listener/app/ALB/292daa6fcbe26883/9b1d6efa0d076ced",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_listener.front_end",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/TargetGroup/94e0029232be9051",
            "arn_suffix": "targetgroup/TargetGroup/94e0029232be9051",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/TargetGroup/94e0029232be9051",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03a6bc60f88ba8c3f"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0361792127d155afd",
            "id": "r-rtb-08362c948e0b71afe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08362c948e0b71afe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:route-table/rtb-08362c948e0b71afe",
            "id": "rtb-08362c948e0b71afe",
            "owner_id": "191805346255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0361792127d155afd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RouteTable"
            },
            "tags_all": {
              "Name": "Public-RouteTable"
            },
            "vpc_id": "vpc-03a6bc60f88ba8c3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a21ce31bc9af1bf2",
            "route_table_id": "rtb-08362c948e0b71afe",
            "subnet_id": "subnet-0bd297faf3ca5e180"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ee5a3b7bdf42d9",
            "route_table_id": "rtb-08362c948e0b71afe",
            "subnet_id": "subnet-02f3a9bd47a24e366"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087931658994921d5",
            "route_table_id": "rtb-08362c948e0b71afe",
            "subnet_id": "subnet-0ad5b170ca6e7e8b2"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:security-group/sg-003b53b3264108d0a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003b53b3264108d0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CustomSG",
            "name_prefix": "",
            "owner_id": "191805346255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS security group dynamic block"
            },
            "tags_all": {
              "Name": "AWS security group dynamic block"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a6bc60f88ba8c3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:subnet/subnet-0bd297faf3ca5e180",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0bd297faf3ca5e180",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191805346255",
            "tags": {
              "Name": "Public-Subnet-0"
            },
            "tags_all": {
              "Name": "Public-Subnet-0"
            },
            "vpc_id": "vpc-03a6bc60f88ba8c3f"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:subnet/subnet-02f3a9bd47a24e366",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-02f3a9bd47a24e366",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191805346255",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-03a6bc60f88ba8c3f"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:subnet/subnet-0ad5b170ca6e7e8b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-0ad5b170ca6e7e8b2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191805346255",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-03a6bc60f88ba8c3f"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:vpc/vpc-03a6bc60f88ba8c3f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-016df2ce77be8173b",
            "default_route_table_id": "rtb-0c47fe1c3cdfa24aa",
            "default_security_group_id": "sg-02ccdc235a82972ac",
            "dhcp_options_id": "dopt-541d7d2e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03a6bc60f88ba8c3f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c47fe1c3cdfa24aa",
            "owner_id": "191805346255"
          }
        }
      ]
    }
  ]
}